Fix carousel overflow-x issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -650,10 +650,6 @@ i:hover {
   padding: 5px;
 }
 
-.carousel-inner {
-  /* overflow: visible; */
-}
-
 /*Carousel Indicator Styling */
 
 #carouselExampleIndicators {
